--- a/templates/designOpenTbl.ui
+++ b/templates/designOpenTbl.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>861</width>
-    <height>484</height>
+    <width>823</width>
+    <height>682</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,9 +16,9 @@
   <widget class="QTableWidget" name="tblData">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>0</x>
      <y>10</y>
-     <width>841</width>
+     <width>821</width>
      <height>431</height>
     </rect>
    </property>
@@ -26,7 +26,7 @@
   <widget class="QPushButton" name="btnUpdTbl">
    <property name="geometry">
     <rect>
-     <x>590</x>
+     <x>580</x>
      <y>450</y>
      <width>111</width>
      <height>23</height>
@@ -39,15 +39,120 @@
   <widget class="QPushButton" name="btnExit">
    <property name="geometry">
     <rect>
-     <x>740</x>
-     <y>450</y>
-     <width>111</width>
-     <height>23</height>
+     <x>700</x>
+     <y>650</y>
+     <width>121</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Выйти</string>
+    <string>Закрыть</string>
    </property>
+  </widget>
+  <widget class="QPushButton" name="btnClearChgAll">
+   <property name="geometry">
+    <rect>
+     <x>750</x>
+     <y>570</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnFindChgAll">
+   <property name="geometry">
+    <rect>
+     <x>750</x>
+     <y>610</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnChgAll">
+   <property name="geometry">
+    <rect>
+     <x>750</x>
+     <y>490</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnStartAll">
+   <property name="geometry">
+    <rect>
+     <x>750</x>
+     <y>530</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnAddStrEditTest">
+   <property name="geometry">
+    <rect>
+     <x>750</x>
+     <y>450</y>
+     <width>41</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QTableWidget" name="tblChgTest">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>450</y>
+     <width>741</width>
+     <height>191</height>
+    </rect>
+   </property>
+   <column>
+    <property name="text">
+     <string>Адрес байта</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Содержимое</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Готово</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Начальное</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Поиск по адресу</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Убрать</string>
+    </property>
+   </column>
   </widget>
  </widget>
  <resources/>
