--- a/templates/design.ui
+++ b/templates/design.ui
@@ -502,6 +502,15 @@
      <string>Загрузить тест</string>
     </property>
    </widget>
+   <widget class="QMenu" name="menu_3">
+    <property name="title">
+     <string>Подключение</string>
+    </property>
+    <addaction name="separator"/>
+    <addaction name="actDB"/>
+    <addaction name="actMail"/>
+   </widget>
+   <addaction name="menu_3"/>
    <addaction name="menu"/>
    <addaction name="menu_2"/>
    <addaction name="menuLoadInputTest"/>
@@ -525,6 +534,16 @@
   <action name="actSaveResByte">
    <property name="text">
     <string>Результат</string>
+   </property>
+  </action>
+  <action name="actDB">
+   <property name="text">
+    <string>База данных</string>
+   </property>
+  </action>
+  <action name="actMail">
+   <property name="text">
+    <string>Почта</string>
    </property>
   </action>
  </widget>
